feat(log): 사용되지 않는 주석 제거